# JewelCraftAI

./: .dockerignore  .gitignore  .replit  Dockerfile  implementation_plan.md  pyproject.toml  replit.md  start.sh  task.md  walkthrough.md
attached_assets/: Pasted-Perfect-Akash-let-s-write-out-your-complete-end-to-end-plan-clearly-and-professionally-the-1761742807502_1761742807515.txt
backend/: main.py  process_logo.py  requirements.txt
backend/utils/: hitem3d_client.py  image_generator.py  image_processor.py
frontend/: next.config.ts  package-lock.json  package.json  package.json.new
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/proxy/: route.ts
frontend/app/components/: ARTryOn.tsx  CreationWizard.tsx  FinalDisplay.tsx  GalleryView.tsx  GenerateForm.tsx  ModificationControls.tsx  SpaceScene.tsx  Viewer3D.tsx
frontend/app/utils/: api.ts  imageUtils.ts
frontend/types/: model-viewer.d.ts
