[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
